--- a/packages/react-instantsearch-dom/package.json
+++ b/packages/react-instantsearch-dom/package.json
@@ -2,6 +2,7 @@
   "name": "react-instantsearch-dom",
   "version": "5.3.2",
   "description": "⚡ Lightning-fast search for React DOM, by Algolia",
+  "types": "./types/index.d.ts",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
   "sideEffects": false,
@@ -49,6 +50,7 @@
     "react-instantsearch-core": "^5.3.2"
   },
   "devDependencies": {
+    "@types/react": "^16.7.17",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-plugin-external-helpers": "6.22.0",
@@ -70,7 +72,8 @@
     "rollup-plugin-node-globals": "1.4.0",
     "rollup-plugin-node-resolve": "4.0.0",
     "rollup-plugin-replace": "2.1.0",
-    "rollup-plugin-uglify": "6.0.0"
+    "rollup-plugin-uglify": "6.0.0",
+    "typescript": "^3.2.2"
   },
   "peerDependencies": {
     "react": ">= 15.3.0 < 17",
